# auth0-flutter

./: .coderabbit.yaml  .editorconfig  .gitignore  .semgrepignore  CHANGELOG.md  DEVELOPMENT.md  DISCOVERY_MY_ACCOUNT_API.md  FAQ.md  NOTICE  PR_835_REVIEW_RESPONSE.md  README.md  Report.yml  TESTING_MY_ACCOUNT_API.md  codecov.yml
.circleci/: config.yml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pr-title-checker-config.json
.github/ISSUE_TEMPLATE/: Bug Report.yml  Feature Request.yml  config.yml
.github/actions/rl-scanner/: action.yml
.github/actions/seteup-android/: action.yml
.github/actions/setup-android/: action.yml
.github/actions/setup-darwin/: action.yml
.github/actions/setup-ios/: action.yml
.github/actions/setup-publish/: action.yml
.github/actions/smoke-tests-darwin/: action.yml
.github/actions/unit-tests-darwin/: action.yml
.github/workflows/: check-symlinks.yml  eslint.yml  main.yml  pr-title-checker.yml  publish-af.yml  publish-afpi.yml  rl-scanner.yml  sca_scan.yml
appium-test/: package-lock.json  package.json  test.js
auth0_flutter/: .gitignore  .metadata  .shiprc  CHANGELOG.md  EXAMPLES.md  FAQ.md  MIGRATION_GUIDE.md  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
auth0_flutter/android/: .gitignore  build.gradle  gradlew.bat  settings.gradle
auth0_flutter/darwin/: .gitignore  auth0_flutter.podspec
auth0_flutter/darwin/Classes/: Auth0FlutterPlugin.m  Auth0FlutterPlugin.swift  Extensions.swift  HandlerError.swift  MethodHandler.swift  Models.swift  Properties.swift  SwiftAuth0FlutterPlugin.swift
auth0_flutter/darwin/auth0_flutter/: Package.resolved  Package.swift
auth0_flutter/doc/api/: __404error.html  index.html  index.json
auth0_flutter/example/: .env.example  .gitignore  .metadata  README.md  analysis_options.yaml  package-lock.json  package.json  pubspec.yaml  test.js
auth0_flutter/example/android/: .gitignore  build.gradle  gradle.properties  local.properties.ci  (+1 more)
auth0_flutter/ios/: .gitignore  auth0_flutter.podspec
auth0_flutter/lib/: auth0_flutter.dart  auth0_flutter_method_channel.dart  auth0_flutter_platform_interface.dart  auth0_flutter_web.dart
auth0_flutter/linux/: .gitignore  CMakeLists.txt  auth0_flutter_plugin.cpp  auth0_flutter_plugin.h  vcpkg.json
auth0_flutter/linux/include/auth0_flutter/: auth0_flutter_plugin_c_api.h
auth0_flutter/linux/test/: auth0_flutter_plugin_test.cpp
auth0_flutter/macos/: .gitignore  auth0_flutter.podspec
auth0_flutter/test/: auth0_flutter_method_channel_test.dart  auth0_flutter_test.dart  authentication_api_test.dart  authentication_api_test.mocks.dart  credentials_manager_test.dart  credentials_manager_test.mocks.dart  web_authentication_test.dart  web_authentication_test.mocks.dart
auth0_flutter/tool/: version.dart
auth0_flutter/windows/: .gitignore  Auth0FlutterWebAuthMethodCallHandler.cpp  Auth0FlutterWebAuthMethodCallHandler.h  CMakeLists.txt  README.md  auth0_api_client.cpp  auth0_api_client.h  auth0_client.cpp  auth0_client.h  auth0_flutter_plugin.cpp  auth0_flutter_plugin.h  auth0_flutter_plugin_c_api.cpp  auth0_flutter_web_auth_method_call_handler.cpp  auth0_flutter_web_auth_method_call_handler.h  authentication_api_client.cpp  authentication_api_client.h  authentication_error.h  credentials.cpp  credentials.h  id_token_signature_validator.cpp  id_token_signature_validator.h  id_token_validator.cpp  id_token_validator.h  jwt_util.cpp  jwt_util.h  networking.cpp  networking.h  oauth_helpers.cpp  oauth_helpers.h  plugin_startup_url_lock.h  time_util.cpp  time_util.h  token_decoder.cpp  token_decoder.h  url_utils.cpp  url_utils.h  user_identity.cpp  user_identity.h  user_profile.cpp  user_profile.h  (+3 more)
auth0_flutter/windows/include/auth0_flutter/: auth0_flutter_plugin_c_api.h
auth0_flutter/windows/request_handlers/web_auth/: LoginWebAuthRequestHandler.cpp  LoginWebAuthRequestHandler.h  LogoutWebAuthRequestHandler.cpp  LogoutWebAuthRequestHandler.h  WebAuthRequestHandler.h  login_web_auth_request_handler.cpp  login_web_auth_request_handler.h  logout_web_auth_request_handler.cpp  logout_web_auth_request_handler.h  web_auth_request_handler.h
auth0_flutter/windows/test/: auth0_api_client_telemetry_test.cpp  auth0_client_telemetry_test.cpp  auth0_flutter_plugin_test.cpp  authentication_api_client_test.cpp  authentication_error_test.cpp  id_token_signature_validator_test.cpp  id_token_validator_test.cpp  jwt_util_test.cpp  login_web_auth_request_handler_test.cpp  oauth_helpers_test.cpp  time_util_test.cpp  token_decoder_test.cpp  url_utils_test.cpp  user_identity_test.cpp  user_profile_test.cpp  windows_utils_test.cpp
auth0_flutter/windows/test/stubs/flutter/: encodable_value.h  method_channel.h  plugin_registrar_windows.h
auth0_flutter_platform_interface/: .gitignore  .shiprc  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
auth0_flutter_platform_interface/lib/: auth0_flutter_platform_interface.dart
auth0_flutter_platform_interface/test/: api_credentials_test.dart  api_exception_test.dart  auth0_exception_test.dart  auth0_flutter_test.dart  auth0_flutter_web_platform_test.dart  auth_custom_token_exchange_options_test.dart  credential_manager_exception_test.dart  credentials_test.dart  method_channel_auth0_flutter_auth_test.dart  method_channel_auth0_flutter_auth_test.mocks.dart  method_channel_auth0_flutter_mfa_test.dart  method_channel_auth0_flutter_my_account_test.dart  method_channel_auth0_flutter_web_auth_test.dart  method_channel_auth0_flutter_web_auth_test.mocks.dart  method_channel_credentials_manager_test.dart  method_channel_credentials_manager_test.mocks.dart  mfa_exception_test.dart  passkey_credential_test.dart  passkey_login_credential_test.dart  passkey_signup_credential_test.dart  user_actor_test.dart  user_profile_test.dart  web_auth_exception_test.dart  web_auth_login_options_test.dart  web_auth_logout_options_test.dart  web_authentication_exception_test.dart
auth0_flutter_web/: pubspec.yaml
auth0_flutter_web/lib/: auth0_flutter_web.dart
scripts/: generate-symlinks.sh
(+1056 files in other folders)
